spacing fix

--- a/frontend/src/components/Spots/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/Spots/SpotDetails/SpotDetails.css
@@ -112,6 +112,7 @@
 }
 
 .hl-titles {
+  margin-top: 16px;
   margin-bottom: 0;
   font-weight: normal;
 }
@@ -123,8 +124,8 @@
 }
 
 .inDepthInfo {
-  width: 100%;
-  height: 200px;
+  width: 190%;
+  height: 100px;
   display: flex;
   align-items: center;
   margin-left: 20px;
